--- a/source/index.html
+++ b/source/index.html
@@ -70,7 +70,7 @@
                 Меня зовут Светлана Романова. Мне 31 год, живу в Москве, разрабатываю фронтенд, чему-то только учусь.
               </div>
               <div class="about__more">
-                <button class="btn btn__more" data-id="btn-about" type="button">Тут более подробно</button>
+                <button class="btn" data-id="btn-about" type="button">Тут более подробно</button>
               </div>
             </div>
           </div>
