--- a/source/index.html
+++ b/source/index.html
@@ -57,16 +57,15 @@
         <section class="about" id="about-me">
           <h2 class="visually-hidden">About</h2>
           <div class="row about__block">
-            <div class="col-6 about__foto">
+            <div class="col-12 col-sm-6 about__photo">
               <picture>
                 <source type="image/webp" srcset="img/photo-me@1x.webp 1x, img/photo-me@2x.webp 2x">
                 <img class="about__img" src="img/photo-me@1x.jpg" width="616" height="396" srcset="img/photo-me@2x.jpg 2x" alt="My photo">
               </picture>
             </div>
-            <div class="col-6 about__descr">
-              <div class="about__header"></div>
+            <div class="col-12 col-sm-6 about__descr">
+              <div class="about__header">Привет!</div>
               <div class="about__info">
-                <p>Привет!</p>
                 Меня зовут Светлана Романова. Мне 31 год, живу в Москве, разрабатываю фронтенд, чему-то только учусь.
               </div>
               <div class="about__more">
