--- a/source/index.html
+++ b/source/index.html
@@ -143,7 +143,7 @@
             <p>То, что применяю:</p>
             <p class="highlight highlight--red">технологии и инструменты</p>
             <ul class="modal__list">
-              <li>Средний опыт в верстке <span class="highlight highlight--green">HTML5, CSS3,</span> верстаю адаптивные сайты;</li>
+              <li>Отличные знания<span class="highlight highlight--green">HTML5, CSS3,</span> верстаю адаптивные сайты;</li>
               <li>Средний уровень <span class="highlight highlight--green">Javascript</span>;</li>
               <li>Хороший опыт работы с препроцессором <span class="highlight highlight--green">SCSS</span>;</li>
               <li>Для сборки верстки использую <span class="highlight highlight--green">Gulp</span>;</li>
@@ -159,6 +159,7 @@
                 Люблю гулять, общаться, спорт(много чего пробовала, много чего нравится). Вдумчива, умею доходчиво объяснять и быть терпеливой.
               </p>
           </div>
+          <button class="btn" data-id="btn-close" type="button">Закрыть</button>
         </div>
       </div>
     </div>
