--- a/source/index.html
+++ b/source/index.html
@@ -59,8 +59,8 @@
           <div class="row about__block">
             <div class="col-12 col-sm-6 about__photo">
               <picture>
-                <source type="image/webp" srcset="img/photo-me@1x.webp 1x, img/photo-me@2x.webp 2x">
-                <img class="about__img" src="img/photo-me@1x.jpg" width="616" height="396" srcset="img/photo-me@2x.jpg 2x" alt="My photo">
+                <source type="image/webp" srcset="img/photo-me.webp 1x, img/photo-me.webp 2x">
+                <img class="about__img" src="img/photo-me.jpg" width="616" height="396" srcset="img/photo-me.jpg 2x" alt="My photo">
               </picture>
             </div>
             <div class="col-12 col-sm-6 about__descr">
