--- a/source/index.html
+++ b/source/index.html
@@ -59,8 +59,8 @@
           <div class="row about__block">
             <div class="col-8 col-sm-6 about__photo">
               <picture>
-                <!-- <source type="image/webp" srcset="img/IMG_7068.webp 1x, img/IMG_7068.webp 2x"> -->
-                <img class="about__img" src="img/IMG_7068.jpg" width="616" height="396" srcset="img/IMG_7068.jpg" alt="My photo">
+                <source type="image/webp" srcset="img/photo-me.webp 1x, img/photo-me.webp 2x">
+                <img class="about__img" src="img/photo-me.jpg" width="616" height="396" srcset="img/photo-me.jpg" alt="My photo">
               </picture>
             </div>
             <div class="col-12 col-sm-6 about__descr">
