--- a/source/index.html
+++ b/source/index.html
@@ -137,12 +137,9 @@
                 <span>&times;</span>
             </button>
           </div>
-          <div class="row modal__body">
-            <div class="col-4">
-              <img class="modal__photo" src="img/IMG_7011.jpg" width="570" height="165" alt="Photo with me">
-            </div>
-            <div class="col-8">
-              Привет, меня зовут Светлана Романова. Мне 31 год, живу в Москве, разрабатываю фронтенд, чему-то только учусь.
+          <div class="modal__body">
+            <div>
+              Привет, меня зовут Светлана Романова. Мне 31 год, живу в Москве, разрабатываю фронтенд.
               <p>То, что применяю:</p>
               <p class="highlight highlight--red">технологии и инструменты</p>
               <ul class="modal__list">
@@ -168,10 +165,10 @@
                   Что еще: <span class="highlight highlight--green">Git, Bootstrap4, БЭМ, Adobe Photoshop</span> и <span class="highlight highlight--green">Figma</span>(на уровне нарезки макета);
                 </li>
                 <li>
-                  В планах начать изучение <span class="highlight highlight--green">React</span>
+                  Начала постигать<span class="highlight highlight--green">React</span>
                 </li>
               </ul>
-              <p>Во многом разбираюсь сама, иногда требуется помощь коллег. В коде люблю чистоту, доступность, называю функции и классы понятными не только для себя именами. Всегда в поиске самых адекватных путей в решении поставленных задач.<br><br>
+              <p>В коде люблю чистоту, доступность, называю функции и классы понятными не только для себя именами. Всегда в поиске самых адекватных путей в решении поставленных задач.<br><br>
                 Хочу активно развиваться в данной сфере и быть частью компании с современным стеком технологий.</p>
 
                 <p><span class="highlight highlight--red">Просто про меня:</span><br>
@@ -179,7 +176,7 @@
                 </p>
             </div>
           </div>
-          <button class="btn" data-id="btn-close" type="button">Закрыть</button>
+          <button class="btn btn--modal" data-id="btn-close" type="button">Закрыть</button>
         </div>
       </div>
     </div>
