--- a/source/index.html
+++ b/source/index.html
@@ -147,7 +147,10 @@
                   Отличные знания<span class="highlight highlight--green">HTML5, CSS3,</span> верстаю адаптивные сайты;
                 </li>
                 <li>
-                  Средний уровень <span class="highlight highlight--green">Javascript</span>;
+                  Нормальные знания <span class="highlight highlight--green">Javascript</span>;
+                </li>
+                <li>
+                  Базовые знания<span class="highlight highlight--green">React</span> (уровень приложения Todo);
                 </li>
                 <li>
                   Хороший опыт работы с препроцессором <span class="highlight highlight--green">SCSS</span>;
@@ -159,13 +162,10 @@
                   Осваивать <span class="highlight highlight--green">Webpack</span> только начала;
                 </li>
                 <li>
-                  Есть знания <span class="highlight highlight--green">jQuery</span>, но Native JS пока в приоритете;
+                  Есть знания <span class="highlight highlight--green">jQuery</span>;
                 </li>
                 <li>
                   Что еще: <span class="highlight highlight--green">Git, Bootstrap4, БЭМ, Adobe Photoshop</span> и <span class="highlight highlight--green">Figma</span>(на уровне нарезки макета);
-                </li>
-                <li>
-                  Начала постигать<span class="highlight highlight--green">React</span>
                 </li>
               </ul>
               <p>В коде люблю чистоту, доступность, называю функции и классы понятными не только для себя именами. Всегда в поиске самых адекватных путей в решении поставленных задач.<br><br>
