--- a/source/index.html
+++ b/source/index.html
@@ -81,6 +81,15 @@
           <div class="portfolio__subheader">Мои работы</div>
           <div class="row portfolio__block">
             <div class="col-12 col-sm-6 portfolio__item">
+              <a href="https://svetlana-romanova.github.io/Expenses-ReactApp/" class="portfolio__photo" target="_blank">
+                <picture>
+                  <source type="image/webp" srcset="img/photo-keyboard@1x.webp 1x, img/photo-keyboard@2x.webp 2x">
+                  <img class="portfolio__img" src="img/photo-keyboard@1x.jpg" width="570" height="165" srcset="img/photo-keyboard@2x.jpg 2x" alt="Photo with keyboard">
+                </picture>
+              </a>
+              <div class="portfolio__descr">React App - check your Expenses</div>
+            </div>
+            <div class="col-12 col-sm-6 portfolio__item">
               <a href="https://svetlana-romanova.github.io/Todo/" class="portfolio__photo" target="_blank">
                 <picture>
                   <source type="image/webp" srcset="img/photo-laptop@1x.webp 1x, img/photo-laptop@2x.webp 2x">
@@ -106,15 +115,6 @@
                 </picture>
               </a>
               <div class="portfolio__descr"> Project with carousel, form, modal HTML/SCSS/native JS</div>
-            </div>
-            <div class="col-12 col-sm-6 portfolio__item">
-              <a href="https://svetlana-romanova.github.io/Bic/build/" class="portfolio__photo" target="_blank">
-                <picture>
-                  <source type="image/webp" srcset="img/photo-keyboard@1x.webp 1x, img/photo-keyboard@2x.webp 2x">
-                  <img class="portfolio__img" src="img/photo-keyboard@1x.jpg" width="570" height="165" srcset="img/photo-keyboard@2x.jpg 2x" alt="Photo with keyboard">
-                </picture>
-              </a>
-              <div class="portfolio__descr">Simple adaptive site</div>
             </div>
           </div>
         </section>
@@ -147,10 +147,10 @@
                   Отличные знания<span class="highlight highlight--green">HTML5, CSS3,</span> верстаю адаптивные сайты;
                 </li>
                 <li>
-                  Нормальные знания <span class="highlight highlight--green">Javascript</span>;
+                  Хорошие знания <span class="highlight highlight--green">Javascript</span>;
                 </li>
                 <li>
-                  Базовые знания<span class="highlight highlight--green">React</span> (уровень приложения Todo);
+                  Средние знания<span class="highlight highlight--green">React</span>;
                 </li>
                 <li>
                   Хороший опыт работы с препроцессором <span class="highlight highlight--green">SCSS</span>;
