--- a/source/index.html
+++ b/source/index.html
@@ -81,6 +81,15 @@
           <div class="portfolio__subheader">Мои работы</div>
           <div class="row portfolio__block">
             <div class="col-12 col-sm-6 portfolio__item">
+              <a href="https://svetlana-romanova.github.io/github-dashboard/" class="portfolio__photo" target="_blank">
+                <picture>
+                  <source type="image/webp" srcset="img/photo-laptop@1x.webp 1x, img/photo-laptop@2x.webp 2x">
+                  <img class="portfolio__img" src="img/photo-laptop@1x.jpg" width="570" height="165" srcset="img/photo-laptop@2x.jpg 2x" alt="Photo with laptop">
+                </picture>
+              </a>
+              <div class="portfolio__descr">Github Dashboard (React, react-router, styled-components)</div>
+            </div>
+            <div class="col-12 col-sm-6 portfolio__item">
               <a href="https://svetlana-romanova.github.io/Expenses-ReactApp/" class="portfolio__photo" target="_blank">
                 <picture>
                   <source type="image/webp" srcset="img/photo-keyboard@1x.webp 1x, img/photo-keyboard@2x.webp 2x">
@@ -88,15 +97,6 @@
                 </picture>
               </a>
               <div class="portfolio__descr">React App - check your Expenses</div>
-            </div>
-            <div class="col-12 col-sm-6 portfolio__item">
-              <a href="https://svetlana-romanova.github.io/Todo/" class="portfolio__photo" target="_blank">
-                <picture>
-                  <source type="image/webp" srcset="img/photo-laptop@1x.webp 1x, img/photo-laptop@2x.webp 2x">
-                  <img class="portfolio__img" src="img/photo-laptop@1x.jpg" width="570" height="165" srcset="img/photo-laptop@2x.jpg 2x" alt="Photo with laptop">
-                </picture>
-              </a>
-              <div class="portfolio__descr">Todo App on React JS</div>
             </div>
             <div class="col-12 col-sm-6 portfolio__item">
               <a href="https://Svetlana-Romanova.github.io/find-cats/build" class="portfolio__photo" target="_blank">
